available hours crud and api initially done
